--- a/index.html
+++ b/index.html
@@ -10,34 +10,38 @@
     <div class="calculator">
         <div class="screen"></div>
         <div class="buttons">
-            <div class="first-row">
-                <button>C</button>
-                <button>DEL</button>
-                <button>/</button>
-                <button>X</button>
+            <div class="top-half">
+                <div class="first-row">
+                    <button>C</button>
+                    <button>DEL</button>
+                    <button>/</button>
+                    <button>X</button>
+                </div>
+                <div class="second-row">
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    <button>-</button>
+                </div>
+                <div class="third-row">
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                    <button>+</button>
+                </div>
             </div>
-            <div class="second-row">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>-</button>
+            <div class="bottom-half">
+                <div class="fourth-row">
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                </div>
+                <div class="fifth-row">
+                    <button>0</button>
+                    <button>.</button>
+                </div>
+                <button class="equals">=</button>
             </div>
-            <div class="third-row">
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>+</button>
-            </div>
-            <div class="fourth-row">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-            </div>
-            <div class="fifth-row">
-                <button>0</button>
-                <button>.</button>
-            </div>
-            <button class="equals">=</button>
         </div>
     </div>
 </body>
