Complete the styling of the calculator and the design of each button and color them

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="buttons">
             <div class="top-half">
                 <div class="first-row">
-                    <button>C</button>
-                    <button>DEL</button>
+                    <button id="clear">C</button>
+                    <button id="delete">DEL</button>
                     <button>/</button>
                     <button>X</button>
                 </div>
@@ -31,14 +31,16 @@
                 </div>
             </div>
             <div class="bottom-half">
-                <div class="fourth-row">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                </div>
-                <div class="fifth-row">
-                    <button>0</button>
-                    <button>.</button>
+                <div class="left-side">
+                    <div class="fourth-row">
+                        <button>1</button>
+                        <button>2</button>
+                        <button>3</button>
+                    </div>
+                    <div class="fifth-row">
+                        <button id="zero">0</button>
+                        <button id="decimal">.</button>
+                    </div>
                 </div>
                 <button class="equals">=</button>
             </div>
