--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
     <div class="calculator">
@@ -14,28 +15,28 @@
                 <div class="first-row">
                     <button id="clear">C</button>
                     <button id="delete">DEL</button>
-                    <button>/</button>
-                    <button>X</button>
+                    <button id="div">/</button>
+                    <button id="mul">x</button>
                 </div>
                 <div class="second-row">
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                    <button>-</button>
+                    <button id="seven">7</button>
+                    <button id="eight">8</button>
+                    <button id="nine">9</button>
+                    <button id="sub">-</button>
                 </div>
                 <div class="third-row">
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button>+</button>
+                    <button id="four">4</button>
+                    <button id="five">5</button>
+                    <button id="six">6</button>
+                    <button id="sum">+</button>
                 </div>
             </div>
             <div class="bottom-half">
                 <div class="left-side">
                     <div class="fourth-row">
-                        <button>1</button>
-                        <button>2</button>
-                        <button>3</button>
+                        <button id="one">1</button>
+                        <button id="two">2</button>
+                        <button id="three">3</button>
                     </div>
                     <div class="fifth-row">
                         <button id="zero">0</button>
